fix: set width 100% on navOuter to prevent squishing in flex parents

--- a/app/components/Navbar.module.css
+++ b/app/components/Navbar.module.css
@@ -4,6 +4,7 @@
   top: 0;
   z-index: 100;
   padding: 36px 24px 0;
+  width: 100%;
 }
 
 .navbar {
